<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openhitls</groupId>
    <artifactId>hitls4j</artifactId>
    <version>1.0</version>

    <dependencies>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.13.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies> 
    
    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <openhitls.root>/root/openhitls</openhitls.root>
    </properties>

<build>
    <plugins>
        <!-- Compile and link JNI library -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
                <execution>
                    <id>compile-jni</id>
                    <phase>compile</phase>
                    <configuration>
                        <target>
                            <mkdir dir="${project.build.directory}/native"/>
                            <!-- Compile JNI code -->
                            <exec executable="gcc" failonerror="true">
                                <arg value="-c"/>
                                <arg value="-fPIC"/>
                                <arg value="-Wall"/>
                                <arg value="-I${env.JAVA_HOME}/include"/>
                                <arg value="-I${env.JAVA_HOME}/include/linux"/>
                                <arg value="-I${basedir}/src/main/native"/>
                                <arg value="-I${openhitls.root}/include"/>
                                <arg value="-I${openhitls.root}/include/bsl"/>
                                <arg value="-I${openhitls.root}/include/crypto"/>
                                <arg value="-I${openhitls.root}/build/include"/>
                                <arg value="${basedir}/src/main/native/crypto_native_jni.c"/>
                                <arg value="-o"/>
                                <arg value="${project.build.directory}/native/crypto_native_jni.o"/>
                            </exec>
                            <!-- Link with dynamic OpenHiTLS libraries -->
                            <exec executable="gcc" failonerror="true">
                                <arg value="-shared"/>
                                <arg value="-o"/>
                                <arg value="${project.build.directory}/native/libhitls_crypto_jni.so"/>
                                <arg value="${project.build.directory}/native/crypto_native_jni.o"/>
                                <arg value="-L${openhitls.root}/build"/>
                                <arg value="-lhitls_crypto"/>
                                <arg value="-lhitls_bsl"/>
                                <arg value="-lboundscheck"/>
                                <arg value="-Wl,-z,noexecstack"/>
                            </exec>
                        </target>
                    </configuration>
                    <goals>
                        <goal>run</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>

        <!-- Package JNI library into JAR -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-resources-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
                <execution>
                    <id>copy-native-libs</id>
                    <phase>process-classes</phase>
                    <goals>
                        <goal>copy-resources</goal>
                    </goals>
                    <configuration>
                        <outputDirectory>${project.build.outputDirectory}/META-INF/native/linux-x86_64</outputDirectory>
                        <resources>
                            <resource>
                                <directory>${project.build.directory}/native</directory>
                                <includes>
                                    <include>*.so</include>
                                </includes>
                            </resource>
                        </resources>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>
</project>